<resources>
    <string name="app_name">CarFlipper</string>

    <string name="add_car">Add a Car</string>

    <!--Hints-->

    <string name="nickaname">Nickname</string>
    <string name="work_name">Work Name</string>
    <string name="part_name">Part Name</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="initial_money">Initial Amount Spent</string>
    <string name="details">Car Details</string>
    <string name="time">Time Spent (aprox.)</string>
    <string name="description">work Description</string>
    <string name="part_num">Part Number (Optional)</string>
    <string name="cost">Cost</string>



    <!--Buttons-->

    <string name="home">Home</string>
    <string name="add_work">Add Work</string>
    <string name="update_car">Update car</string>
    <string name="sell">Sell Car</string>
    <string name="save">Save</string>
    <string name="add_part">Add a Part</string>
    <string name="nvm">Never mind</string>
    <string name="fill">See Your Cars</string>
</resources>
